--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,9 @@ edition = "2021"
 
 [dependencies]
 serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
 dotenv = "0.15.0"
+toml = "0.8.19"
+reqwest ={ version = "0.12.9", features = ["json"] }
+serde_json = "1.0.133"
+serde = "1.0.215"
